* permalink are now /yyyy/mm/title

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ linkedin_username: floriancourgey
 github_username:  floriancourgey
 rss: rss
 
+permalink: /:year/:month/:title
+
 disqus:
   shortname: floriancourgey
 
