--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,10 @@ disqus:
 
 gtm: GTM-PZGWZJG
 
+algolia:
+  application_id: B5V7RM7VIT
+  index_name:     jekyll
+
 # Build settings
 markdown: kramdown
 theme: minima
