--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,15 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://blog.floriancourgey.com" # the base hostname & protocol for your site, e.g. http://example.com
 
+manifest:
+  name: "Blog floriancourgey.com"
+  short_name: "Blog fc.com"
+  theme_color: "#2196f3"
+  background_color: "#2196f3"
+  display: "browser"
+  scope: "/"
+  start_url: "/"
+
 permalink: /:year/:month/:title
 
 disqus:
