--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ permalink: /:year/:month/:title
 disqus:
   shortname: floriancourgey
 
-gtm: GTM-PZGWZJG
+gtm: GTM-W6RKLQQ
 
 algolia:
   application_id: B5V7RM7VIT
