--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,14 @@ gtm: GTM-W6RKLQQ
 algolia:
   application_id: B5V7RM7VIT
   index_name:     jekyll
+  settings:
+    searchableAttributes:
+      - title
+      - headings
+      - unordered(content)
+      - collection
+      - categories
+      - tags
 
 # Build settings
 markdown: kramdown
