--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ disqus:
 
 gtm: GTM-W6RKLQQ
 
+paginate: 10
+paginate_path: "/page-:num/"
+
 collections:
   authors:
     output: true
@@ -80,6 +83,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
