! change email to blog@... (was florian@...)

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Blog by Florian Courgey
-email: florian@floriancourgey.com
+email: blog@floriancourgey.com
 description: >- # this means to ignore newlines until "baseurl:"
   Curated list of tech tutorials on a wide variety of topics including PrestaShop,
   Adobe Campaign, Symfony, Angular, Django and much more!
