+ jekyll-redirect-from

--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ plugins:
   - jekyll-paginate
   - jekyll-relative-links
   - jekyll-seo-tag
+  - jekyll-redirect-from
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
