+ _config exclude vendor and node_modules

--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,5 @@ plugins:
 exclude:
   - Gemfile
   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+  - node_modules
+  - vendor
