Update travis, stopped htmlproofer

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
 script:
   - bundle exec jekyll doctor
   - bundle exec jekyll build
-  - bundle exec htmlproofer ./_site --check-html --disable-external
+#  - bundle exec htmlproofer ./_site --check-html --disable-external
